Implement REST APIs for user service

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   thymeleaf:
     cache: false
+  security:
+    user:
+      name: root
+      password: root
 
 logging:
   level:
